[package]
name = "parameter_multi_thread_sub"
version = "0.0.0"
edition = "2021"

[profile.colcon]
inherits = "release"

[dependencies]
async-std = { version = "1", features = ["attributes"] }
safe_drive = "0.2"
std_msgs = { path = "/tmp/safe_drive_tutorial/pubsub/std_msgs" }

[package.metadata.ros]
msg = ["std_msgs"]
msg_dir = "/tmp/safe_drive_tutorial/pubsub"
safe_drive_version = "0.2"