<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sub</name>
  <version>0.0.0</version>
  <description>The sub package</description>
  <maintainer email="beike315@icloud.com">Tatsuhio ikebe</maintainer>
  <license>Apache-2.0</license>
  <author>Tatsuhio ikebe</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
